<resources>
    <string name="app_name">Construction objects</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="construction_fragment_label">Construction Objects</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="construction_name_hint">Название</string>
    <string name="construction_description_hint">Описание</string>
    <string name="construction_area_hint">Область</string>
    <string name="construction_district_hint">Район</string>
    <string name="construction_floors_hint">Этажность</string>
    <string name="construction_price_hint">Цена</string>
    <string name="construction_price_min_hint">Цена Мин</string>
    <string name="construction_price_max_hint">Цена Макс</string>
    <string name="construction_type_hint">Тип</string>
    <string name="construction_image_hint">Превью</string>
    <string name="construction_button_add">Добавить</string>
    <string name="construction_button_save">Сохранить</string>
    <string name="filter_price_dialog_title">Фильтр по цене</string>
    <string name="filter_district_dialog_title">Фильтр по районам</string>
    <string name="filter">Фильтр</string>
</resources>