<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Поле ввода названия объекта -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_construction_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/construction_name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_construction_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле ввода описания объекта -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_construction_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/construction_description_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_construction_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле ввода области объекта -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_construction_area_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/construction_area_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_area_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле ввода район объекта -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_construction_district_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/construction_district_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_district_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле ввода этажности объекта -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_construction_floors_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/construction_floors_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_floors_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле ввода средняя стоимость объекта -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_construction_price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/construction_price_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_price_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле ввода тип объекта -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_construction_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/construction_type_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_type_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле ввода изображения объекта -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_construction_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/construction_image_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_construction_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопка добавления объекта -->
    <Button
        android:id="@+id/save_object_button"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/construction_button_save" />

</LinearLayout>

</ScrollView>